Collapse filtered encounters, minor corrections

--- a/src/assets/Pokemon/CSS/PokemonEncounterIcons.css
+++ b/src/assets/Pokemon/CSS/PokemonEncounterIcons.css
@@ -210,7 +210,7 @@
 .sinnoh>.encounterIcon.gift {
   width: 17px;
   height: 17px;
-  --x-pos: -1029px;
+  --x-pos: -1031px;
 }
 .sinnoh>.encounterIcon.rock-smash {
   width: 14px;
